complete swagger, shipout+warehouse movement fixed
